force-app/main/default/objects/Reference_Data__c/Reference_Data__c.object-meta.xml
<CustomObject>
    <description>For various programs there is a need to provide data specific items per program.  Currently this object is used in reference to the various types (Referral Source, Skill, etc) as items that reference intake forms use.  This object can be expanded to include more Program specific data as necessary.</description>
    <label>Reference Data</label>
    <nameField>
        <label>Reference Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>