force-app/main/default/objects/Reference_Data__c/fields/Custom_Ordinal__c.field-meta.xml
<CustomField>
    <fullName>Custom_Ordinal__c</fullName>
    <description>Field for providing custom ordering for Refrence Data</description>
    <label>Custom Ordinal</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>