force-app/main/default/objects/Reference_Data__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Reference Datas</relationshipLabel>
    <relationshipName>Reference_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>