force-app/main/default/objects/Reference_Data__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Referral Source</fullName>
            </value>
            <value>
                <fullName>Skill</fullName>
            </value>
            <value>
                <fullName>Position</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>