force-app/main/default/objects/Reference_Data__c/listViews/all_fields.listView-meta.xml
<ListView>
    <fullName>all_fields</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Program_Name__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>all - fields</label>
</ListView>